# noiseport

apiserver/: manage.py  pyproject.toml
apiserver/apiserver/: asgi.py  filters.py  settings.py  urls.py  wsgi.py
apiserver/apiserver/api/: __init__.py  admin.py  apps.py  fields.py  models.py  permissions.py  serializers.py  signals.py  test_api.py  tests.py  throttles.py  utils.py  utils_auth.py  utils_email.py  utils_ldap.py  utils_mediawiki.py  utils_paypal.py  utils_stats.py  utils_todo.py  views.py
apiserver/apiserver/api/management/commands/: bill_trotec.py  delete_old_static.py  generate_backups.py  link_old_sessions.py  run_daily.py  run_hourly.py  run_minutely.py  run_weekly.py
apiserver/scripts/: calc_subs_membership_length.py  clean_member_names.py  convert_card_seen.py  delete_addresses.py  delete_course_merge_into.py  delete_tool.py  delete_usagetracks.py  distinguish_paused_expired.py  embroidery_auth_update.py  export_class_report.py  export_member_addresses.py  export_member_statuses.py  gen_card_photos.py  generate_ldap_users.py  generate_storage_spaces.py  generate_users.py  get_paypal_tx.py  hammertime.py  import_card_scans.py  import_member_counts.py  import_missing_paypal.py  import_old_portal.py  import_paypal_txn_type.py  import_rabbit_group.py  import_signup_counts.py  import_six_month_plus_count.py  import_subs_counts.py  import_trotec_group.py  import_vetted_count.py  lockout_auth_update.py  sync_member_statuses.py  train_paypal_ids.py
authserver/: auth_functions.py  log.py  pyproject.toml  server.py
webclient/: .gitignore  eslint.config.js  package-lock.json  package.json
webclient/e2e/: README.md  helpers.js  jest.config.js
webclient/e2e/__tests__/: baseline.js  visual-regression.test.js
webclient/src/: Account.js  Admin.js  AdminMembers.js  AdminTransactions.js  App.js  Auth.js  Cards.js  Charts.js  Classes.js  Courses.js  Debug.js  Display.js  Garden.js  Home.js  InstructorClasses.js  LoginSignup.js  ManageScroll.js  Members.js  Quiz.js  Storage.js  Training.js  Transactions.js  Usage.js  index.js
webclient/src/spaceport/: scene.js
