[project]
name = "apiserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Django stack
    "django>=5.0,<5.2",
    "djangorestframework>=3.15.1,<4.0",
    "dj-rest-auth>=7.0.1,<8.0",
    "django-allauth>=65.13.1,<66.0",
    "django-cors-headers>=4.3.0,<5.0",
    "django-extensions>=3.2.3,<4.0",
    "django-oidc-provider>=0.9.0,<1.0",
    "django-simple-history>=3.4.0,<4.0",
    
    # Security & Auth
    "argon2-cffi>=21.0.0,<24.0",
    "oauthlib>=3.2.0,<4.0",
    "python3-openid>=3.2.0,<4.0",
    "requests-oauthlib>=1.3.0,<2.0",
    "pyjwkest>=1.4.2,<2.0",
    "pycryptodomex>=3.22.0,<4.0",
    "defusedxml>=0.7.0,<1.0",
    
    # HTTP & Network
    "requests>=2.31.0,<3.0",
    "urllib3>=2.0.0,<3.0",
    "certifi>=2023.0.0",
    "chardet>=5.0.0,<6.0",
    "idna>=3.0,<4.0",
    
    # WSGI server
    "gunicorn>=22.0.0,<23.0",
    
    # Caching
    "pymemcache>=4.0.0,<5.0",
    "python-memcached>=1.59,<2.0",
    
    # MQTT
    "paho-mqtt>=1.6.1,<3.0",
    
    # Data processing
    "pillow>=12.0.0,<13.0",
    "icalendar>=5.0.0,<6.0",
    "pypdf2>=3.0.0,<4.0",
    "reportlab>=4.0.4,<5.0",
    "xmltodict>=0.13.0,<1.0",
    
    # Text processing & matching
    "fuzzywuzzy>=0.18.0,<1.0",
    "python-levenshtein>=0.27.3,<1.0",
    
    # Dates & utilities
    "python-dateutil>=2.8.1,<3.0",
    "six>=1.16.0,<2.0",
    "future>=1.0.0,<2.0",
    
    # Documentation (Sphinx stack)
    "sphinx>=7.0.0,<8.0",
    "sphinx-rtd-theme>=2.0.0,<3.0",
    "myst-parser>=2.0.0,<4.0",
    "recommonmark>=0.7.1,<1.0",
    "docutils>=0.20.0,<1.0",
    "babel>=2.14.0,<3.0",
    "alabaster>=0.7.16,<1.0",
    "snowballstemmer>=2.2.0,<3.0",
    "imagesize>=1.4.0,<2.0",
    "sphinxcontrib-applehelp>=1.0.8,<2.0",
    "sphinxcontrib-devhelp>=1.0.6,<2.0",
    "sphinxcontrib-htmlhelp>=2.0.5,<3.0",
    "sphinxcontrib-httpdomain>=1.8.0,<2.0",
    "sphinxcontrib-jsmath>=1.0.1,<2.0",
    "sphinxcontrib-qthelp>=1.0.7,<2.0",
    "sphinxcontrib-serializinghtml>=1.1.10,<2.0",
    
    # IPython / REPL
    "ipython>=8.0.0,<9.0",
    "jedi>=0.19.0,<1.0",
    "prompt-toolkit>=3.0.43,<4.0",
    "pygments>=2.17.0,<3.0",
    "backcall>=0.2.0,<1.0",
    "decorator>=5.1.1,<6.0",
    "matplotlib-inline>=0.1.6,<1.0",
    "traitlets>=5.14.0,<6.0",
    "pexpect>=4.9.0,<5.0;sys_platform!='win32'",
    "pickleshare>=0.7.5,<1.0",
    "ptyprocess>=0.7.0,<1.0;sys_platform!='win32'",
    "wcwidth>=0.2.13,<1.0",
    "parso>=0.8.3,<1.0",
    
    # Markdown & templating
    "jinja2>=3.1.0,<4.0",
    "markupsafe>=2.1.0,<3.0",
    "markdown-it-py>=3.0.0,<4.0",
    "mdit-py-plugins>=0.4.0,<1.0",
    "mdurl>=0.1.2,<1.0",
    "commonmark>=0.9.1,<1.0",
    "bleach>=6.0.0,<7.0",
    "webencodings>=0.5.1,<1.0",
    
    # Misc utilities
    "logging-tree>=1.10,<2.0",
    "mwclient>=0.11.0,<1.0",
    "packaging>=23.0,<25.0",
    "pyparsing>=3.0.0,<4.0",
    "pycparser>=2.21,<3.0",
    "pyexpect>=1.0.22,<2.0",
    "importlib-metadata>=7.0.0,<8.0;python_version<'3.10'",
    "typing-extensions>=4.9.0,<5.0",
    "zipp>=3.17.0,<4.0",
]

[dependency-groups]
dev = [
    "django-upgrade>=1.29.1",
]
