[project]
name = "authserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2021.5.30",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "logging-tree>=1.10",
    "markupsafe>=3.0.3",
    "requests>=2.32.5",
    "urllib3>=2.6.1",
    "werkzeug>=3.1.4",
]
